# temp-devices-accessor

./: README.md  pyproject.toml  requirements.txt
app/: app_factory.py  main.py
app/src/: logger.py
app/src/api/: dependencies.py  exceptions.py  test.py
app/src/api/api_v1/: api.py  dependencies.py
app/src/api/api_v1/endpoints/: config_info.py  dryer.py  gpio.py  silicon_thermal.py  temperature.py
app/src/config/: drivers_config.yaml  email_config.yaml  evks_config.yaml  gpio_config.yaml  operation_config.yaml  params_config.yaml  silicon_thermals_config.yaml
app/src/core/: configs.py  settings.py
app/src/drivers/: gpio.py  silicon_thermal.py  temperature.py
app/src/schemas/: gpio.py  temperature.py
app/src/services/: base_service.py  containers.py  drivers_access_services.py  email_service.py  gpio_service.py  silicon_thermal_service.py  watchdog_service.py
app/tests/: utils.py
app/tests/drivers/: conftest.py  test_gpio.py  test_silicon_thermal.py
app/tests/services/: conftest.py  test_containers.py  test_gpio_service.py  test_silicon_thermal_service.py  test_watchdog_service.py
docker/: Dockerfile  docker-compose.yml
